tests/golden/fixtures/parse-abs-suffix-removed/expected.err
Error: invalid syntax: expected something else, found identifier 'abs'
   ╭─[ tests/golden/fixtures/parse-abs-suffix-removed/input.k65:5:11 ]
   │
 5 │     lda x:abs
   │           ─┬─  
   │            ╰─── here
───╯
